// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checklist Upload leave certification step renders correctly if claim reason is adoption 1`] = `
<Step
  key="uploadCertification"
  number={6}
  status="completed"
  stepHref="/claims/upload-certification?claim_id=mock_application_id"
  title="Upload leave certification documents"
>
  <Trans
    components={
      Object {
        "healthcare-provider-form-link": <a
          href="https://www.mass.gov/hcp-form"
          rel="noopener"
          target="_blank"
        />,
        "li": <li />,
        "ul": <ul />,
      }
    }
    i18nKey="pages.claimsChecklist.stepHTMLDescription"
    tOptions={
      Object {
        "context": "bondingAdoptFoster",
      }
    }
  />
</Step>
`;

exports[`Checklist Upload leave certification step renders correctly if claim reason is medical 1`] = `
<Step
  key="uploadCertification"
  number={6}
  status="completed"
  stepHref="/claims/upload-certification?claim_id=mock_application_id"
  title="Upload leave certification documents"
>
  <Trans
    components={
      Object {
        "healthcare-provider-form-link": <a
          href="https://www.mass.gov/hcp-form"
          rel="noopener"
          target="_blank"
        />,
        "li": <li />,
        "ul": <ul />,
      }
    }
    i18nKey="pages.claimsChecklist.stepHTMLDescription"
    tOptions={
      Object {
        "context": "medical",
      }
    }
  />
</Step>
`;

exports[`Checklist Upload leave certification step renders correctly if claim reason is newborn 1`] = `
<Step
  key="uploadCertification"
  number={6}
  status="completed"
  stepHref="/claims/upload-certification?claim_id=mock_application_id"
  title="Upload leave certification documents"
>
  <Trans
    components={
      Object {
        "healthcare-provider-form-link": <a
          href="https://www.mass.gov/hcp-form"
          rel="noopener"
          target="_blank"
        />,
        "li": <li />,
        "ul": <ul />,
      }
    }
    i18nKey="pages.claimsChecklist.stepHTMLDescription"
    tOptions={
      Object {
        "context": "bondingNewborn",
      }
    }
  />
</Step>
`;

exports[`Checklist when Part 1 is submitted renders descriptions for Part 2 and 3 1`] = `"Uploading documents online leads to faster processing, but you can also fax documents to NNN-NNN-NNNN, or mail them to 123 Address."`;

exports[`Checklist when Part 1 is submitted renders descriptions for Part 2 and 3 2`] = `"Entering payment information here leads to faster processing, but you can also call XXX‑XXX‑XXXX."`;

exports[`Checklist when Part 1 is submitted renders different description for Part 1 1`] = `"If you need to edit your information in Part 1, you’ll need to call the Contact Center at XXX‑XXX‑XXXX."`;

exports[`Checklist when claim has not been started renders initial checklist state 1`] = `
<div
  className="measure-6"
>
  <BackButton
    href="/"
    label="Back to Dashboard"
  />
  <Title
    hidden={true}
  >
    Checklist: Create a new application
  </Title>
  <StepList
    completedText="Completed"
    description="Your progress is automatically saved as you complete the application. You can edit any information you enter in Part 1 until step 5 is completed."
    editText="Edit"
    key="1"
    resumeText="Resume"
    screenReaderNumberPrefix="Step"
    startText="Start"
    title={
      <Trans
        components={
          Object {
            "part-number": <span
              className="display-block font-heading-2xs margin-bottom-1 text-base-dark"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepListTitle"
        tOptions={
          Object {
            "context": "1",
          }
        }
        values={
          Object {
            "number": 1,
          }
        }
      />
    }
  >
    <Step
      key="verifyId"
      number={1}
      status="not_started"
      stepHref="/claims/name?claim_id=mock_application_id"
      title="Verify your identity"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "verifyId",
          }
        }
      />
    </Step>
    <Step
      key="leaveDetails"
      number={2}
      status="disabled"
      stepHref="/claims/leave-reason?claim_id=mock_application_id"
      title="Enter leave details"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "leaveDetails",
          }
        }
      />
    </Step>
    <Step
      key="employerInformation"
      number={3}
      status="disabled"
      stepHref="/claims/employment-status?claim_id=mock_application_id"
      title="Enter employment information"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "employerInformation",
          }
        }
      />
    </Step>
    <Step
      key="otherLeave"
      number={4}
      status="disabled"
      stepHref="/claims/employer-benefits?claim_id=mock_application_id"
      title="Report other leave and benefits"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "otherLeave",
          }
        }
      />
    </Step>
  </StepList>
  <StepList
    completedText="Completed"
    description={null}
    editText="Edit"
    key="2"
    resumeText="Resume"
    screenReaderNumberPrefix="Step"
    startText="Start"
    title={
      <Trans
        components={
          Object {
            "part-number": <span
              className="display-block font-heading-2xs margin-bottom-1 text-base-dark"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepListTitle"
        tOptions={
          Object {
            "context": "2",
          }
        }
        values={
          Object {
            "number": 2,
          }
        }
      />
    }
  >
    <Step
      key="uploadId"
      number={5}
      status="disabled"
      stepHref="/claims/upload-id?claim_id=mock_application_id"
      title="Upload identity document"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "uploadId",
          }
        }
      />
    </Step>
    <Step
      key="uploadCertification"
      number={6}
      status="disabled"
      stepHref="/claims/upload-certification?claim_id=mock_application_id"
      title="Upload leave certification documents"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": undefined,
          }
        }
      />
    </Step>
  </StepList>
  <StepList
    completedText="Completed"
    description={null}
    editText="Edit"
    key="3"
    resumeText="Resume"
    screenReaderNumberPrefix="Step"
    startText="Start"
    title={
      <Trans
        components={
          Object {
            "part-number": <span
              className="display-block font-heading-2xs margin-bottom-1 text-base-dark"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepListTitle"
        tOptions={
          Object {
            "context": "3",
          }
        }
        values={
          Object {
            "number": 3,
          }
        }
      />
    }
  >
    <Step
      key="payment"
      number={7}
      status="disabled"
      stepHref="/claims/payment-method?claim_id=mock_application_id"
      title="Add payment information"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "payment",
          }
        }
      />
    </Step>
  </StepList>
  <ButtonLink
    className="margin-bottom-8"
    disabled={true}
    href="/claims/review?claim_id=mock_application_id"
  >
    Review and submit application
  </ButtonLink>
</div>
`;
